# bar

./: .gitignore  BUILD.bazel  README.md  bar.go  main.go
bar/: BUILD.bazel  bar.go  unit_typical_test.go
examples/: BUILD.bazel  main.go
