load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = ["main.go"],
    importpath = "github.com/mihaigalos/bar/examples",
    visibility = ["//visibility:private"],
    deps = ["//:bar_lib"],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
